# operating-systems

./: .gitignore
Lab_1/: readme.md
Lab_1/linux/: CMakeLists.txt  build.sh  main.cpp  number.h  readme.md  vector.h
Lab_1/windows/: readme.md  windows.sln
Lab_1/windows/Number/: Number.cpp  Number.vcxproj  Number.vcxproj.filters  number.h
Lab_1/windows/Vector/: Vector.vcxproj  vector.cpp  vector.h
Lab_1/windows/windows/: windows.vcxproj
Lab_2/pthread/: matrix_pthread.cpp  pthread.bash
Lab_2/thread/: matrix_thread.cpp  thread.bash
Lab_2/windows/: windows.cpp
Lab_2/windows/matrix/: matrix.sln  windows.cpp
Lab_2/windows/matrix/matrix/: matrix.vcxproj  matrix.vcxproj.filters
Lab_2/windows/matrix/matrix/x64/Debug/: matrix.exe.recipe  matrix.ilk  vc143.idb
Lab_2/windows/matrix/matrix/x64/Debug/matrix.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  matrix.lastbuildstate
Lab_3/: buffered_channel.h  channels.bash  matrix_thread.cpp
Lab_4/: 4.bash  abc.cpp  bye.cpp  killer  user
new/1_Pipes/: receiver.cpp  run.bash  sender.cpp
new/2_SharedMemory/: reader.cpp  run.bash  writer.cpp
new/3_Sockets/: client.cpp  server.cpp
new/4_MessageQueue/: mq_recv.cpp  mq_send.cpp  run.bash
